Fix - layout cut off issue fix test

--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -104,10 +104,10 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .background-lgeo {
-  width: 90%;
+  /* width: 90%; */
   display: inline-block;
   padding-left: 2%;
-  padding-right: 10%;
+  /* padding-right: 10%; */
   /*border-left-style: solid;
   border-left-color: #4A8F97;
   border-left-width: 1pt; */
@@ -118,7 +118,7 @@
   /*width: 100%;*/
   display: inline-block;
   padding-left: 2%;
-  padding-right: 10%;
+  /* padding-right: 10%; */
   /*border-left-style: solid;
   border-left-color: #4A8F97;
   border-left-width: 1pt; */
